Move to Twitter bootstrap for css/js add set of options for prompt

--- a/app/index.html
+++ b/app/index.html
@@ -2,25 +2,19 @@
 <html>
     <head>
         <title>Promptr - Get your prompt just right</title>
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     </head>
     <body>
-        <h1>Promptr</h1>
-        <ol id='steps'>
-            <li>Options</li>
-            <ul id='choices'>
-                <li>Weekday Month Day (Mon Jan 1)</li>
-                <li>Short Hostname</li>
-                <li>Full Hostname</li>
-            </ul>
-            <li>Colors</li>
-            <ul id='choices'>
-                <li>Red</li>
-                <li>Green</li>
-                <li>Blue</li>
-            </ul>
-        </ol>
-        <textarea cols="80" rows="2">Prompt</textarea>
+        <div class="container">
+            <h1>Promptr</h1>
+            <ol id="steps">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </div>
+    <script type="text/javascript" src="js/promptr.js"></script>
     </body>
 </html>
