Make options checkboxes, pretty it up

--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,15 @@
     <body>
         <div class="container">
             <h1>Promptr</h1>
-            <ol id="steps">
-                <li></li>
-                <li></li>
-                <li></li>
-            </ol>
+            <form class="form-horizontal">
+                <fieldset>
+                <legend>Customize your prompt</legend>
+                <ol id="steps">
+                    <li></li>
+                </ol>
+            </form>
         </div>
     <script type="text/javascript" src="js/promptr.js"></script>
+    <script type="text/javascript" src="js/tooltips.js"></script>
     </body>
 </html>
