Add drag/drop sorting

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,6 @@
         <title>Promptr - Get your prompt just right</title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     </head>
     <body>
         <div class="container">
@@ -14,10 +13,15 @@
                 <legend>Customize your prompt</legend>
                 <ol id="steps">
                     <li></li>
+                    <div class="form-actions">
+                        <button type="button" id="order" class="pull-right btn btn-large btn-primary">Order 'em</button>
+                    </div>
                 </ol>
             </form>
         </div>
-    <script type="text/javascript" src="js/promptr.js"></script>
-    <script type="text/javascript" src="js/tooltips.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="js/promptr.js"></script>
+        <script type="text/javascript" src="js/tooltips.js"></script>
     </body>
 </html>
