Pretty up the listing of options

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
                 <ol id="steps">
                     <li></li>
                     <div class="form-actions">
-                        <button type="button" id="order" class="pull-right btn btn-large btn-primary">Order 'em</button>
+                        <button type="button" id="button" class="pull-right btn btn-large btn-primary">Order 'em</button>
                     </div>
                 </ol>
             </form>
