Add color picker

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Promptr - Get your prompt just right</title>
+        <link rel="stylesheet" type="text/css" href="css/colour_picker.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
@@ -23,5 +24,6 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js/promptr.js"></script>
         <script type="text/javascript" src="js/tooltips.js"></script>
+        <script type="text/javascript" src="js/jquery.colourPicker.js"></script>
     </body>
 </html>
