Add clippy js to copy to clipboard, reogranize js code for upcoming colors

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                         <button type="button" id="button" class="pull-right btn btn-large btn-primary">Order 'em</button>
                     </div>
                 </ol>
+                    <div id="prompt" class="input-prepend pull-left">
+                        <span class="add-on" title="Copy to clipboard"></span><input class="span9" id="prompt-input" value="" type="text">
+                    </div>
             </form>
         </div>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -25,5 +28,6 @@
         <script type="text/javascript" src="js/promptr.js"></script>
         <script type="text/javascript" src="js/tooltips.js"></script>
         <script type="text/javascript" src="js/jquery.colourPicker.js"></script>
+        <script type="text/javascript" src="js/clippy/jquery.clippy.min.js"></script>
     </body>
 </html>
