Add empty elements for all steps with correct numbered order

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
                 <fieldset>
                 <legend>Customize your prompt</legend>
                 <ol id="steps">
-                    <li></li>
+                    <li id="pick-options"></li>
+                    <li id="order-options"></li>
+                    <!--<li id="color-options"></li>-->
                     <div class="form-actions">
                         <button type="button" id="button" class="pull-right btn btn-large btn-primary">Order 'em</button>
                     </div>
