Dynamically add to list of items to order as items are selected
- This allows the user to play with the form back and forth.  For example, now
  you can select a few options, order, see the prompt then immediately add
  another option or remove it and generate again without refreshing page.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
                 <fieldset>
                 <legend>Customize your prompt</legend>
                 <ol id="steps">
-                    <li id="pick-options"></li>
-                    <li id="order-options"></li>
+                    <li id="pick-options">
+                    </li>
+                    <li id="order-options">
+                        <h2>Order Options</h2>
+                        <ul id="sortable" class="nav nav-tabs nav-stacked">
+                        </ul>
+                    </li>
                     <!--<li id="color-options"></li>-->
                     <div class="form-actions">
-                        <button type="button" id="button" class="pull-right btn btn-large btn-primary">Order 'em</button>
+                        <button type="button" id="button" class="pull-right btn btn-large btn-primary">Show Prompt</button>
                     </div>
                 </ol>
                     <div id="prompt" class="input-prepend pull-left">
